--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #28385E;
   --primary-dark: #516c8d;
-  --accent: #d4ff6a;
+  --accent: #7f993f;
   --text: #2b1d12;
   --muted: #5a4636;
   --bg: #f8f4ef;
