--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #F3F6F4;
-  --primary-dark: #516c8d;
-  --accent: #7f993f;
+  --primary-dark: #304054;
+  --accent: #516c8d;
   --text: #2b1d12;
   --muted: #28385E;
   --bg: #DDDDDD;
