--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,7 +183,7 @@ nav a:hover, nav a:focus {
   inset: 0;
   z-index: 1;
   overflow: hidden;
-  background: #60452c;
+  background: #516c8d;
 }
 
 .hero-slide {
