--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,7 @@ nav a:hover, nav a:focus {
   height: clamp(180px, 36vw, 240px);
   width: 100%;
   object-fit: cover;
+  object-position: center top;
   display: block;
 }
 
