Enlarge Google Plus icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,6 +602,11 @@ textarea {
   filter: brightness(0) saturate(100%) invert(100%) sepia(6%) saturate(16%) hue-rotate(229deg) brightness(111%) contrast(101%);
 }
 
+.social-icon.social-icon-google {
+  width: 27px;
+  height: 27px;
+}
+
 .social-pill:hover,
 .social-pill:focus {
   background: var(--primary-dark);
